# paypal-rest-client

./: README.md  paypal-client.cabal  paypal-rest-client.cabal  stack.yaml
example/: .gitignore  Config.example.hs  Main.hs  example.cabal  list_payments.hamlet  new_payment.hamlet
src/Network/Payments/: PayPal.hs
src/Network/Payments/PayPal/: Auth.hs  Environment.hs  Hateoas.hs  Payments.hs
src/Network/Payments/PayPal/Types/: Address.hs  Currency.hs  FundingInstrument.hs  Hateoas.hs  Paging.hs  Payer.hs  Transaction.hs
