name: paypal-rest-client
version: 0.1.0
synopsis: A client to connect to PayPal's REST API (v1)
license: MIT
license-file: LICENSE
author: Braden Walters
maintainer: vc@braden-walters.info
category: Network
build-type: Simple
cabal-version: >= 1.10

library
  exposed-modules:
      Network.Payments.PayPal
    , Network.Payments.PayPal.Environment
    , Network.Payments.PayPal.Auth
    , Network.Payments.PayPal.Payments
    , Network.Payments.PayPal.Types.Address
    , Network.Payments.PayPal.Types.FundingInstrument
    , Network.Payments.PayPal.Types.Hateoas
    , Network.Payments.PayPal.Types.Paging
    , Network.Payments.PayPal.Types.Payer
    , Network.Payments.PayPal.Types.Transaction
  build-depends:
      base >= 4 && < 5
    , bytestring >= 0.10.0
    , containers >= 0.1.0
    , wreq >= 0.4.0 && < 0.5.0
    , http-client >= 0.4.6
    , http-types >= 0.8
    , lens >= 4.5
    , text >= 1.2
    , aeson >= 0.10
    , country-codes >= 0.1.3
    , time >= 1.0 && < 1.7
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -O2
