name: example
version: 0.1.0
synopsis: An example in Yesod using the PayPal REST client
license: MIT
license-file: LICENSE
author: Braden Walters
maintainer: vc@braden-walters.info
category: Network
build-type: Simple
cabal-version: >= 1.10

executable example
  main-is: Main.hs
  build-depends:
      base >= 4 && < 5
    , time >= 1.5 && < 1.7
    , yesod >= 1.4.0 && < 1.5.0
    , shakespeare
    , paypal-rest-client
  default-language:    Haskell2010
